<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/bottom_bar_background"
    app:bbn_itemColorActive="@color/bottom_bar_active"
    app:bbn_itemColorInactive="@color/bottom_bar_inactive"
    app:bbn_alwaysShowLabels="true">
    <item
        android:id="@+id/bbn_item1"
        android:icon="@drawable/ic_home_white"
        android:title="@string/bottom_navigation_home" />
    <item
        android:id="@+id/bbn_item2"
        android:icon="@drawable/ic_share_white"
        android:title="@string/bottom_navigation_share" />
    <item
        android:id="@+id/bbn_item3"
        android:icon="@drawable/ic_wallet_white"
        android:title="@string/bottom_navigation_wallet" />
    <item
        android:id="@+id/bbn_item4"
        android:icon="@drawable/ic_my_white"
        android:title="@string/bottom_navigation_my" />
</menu>