<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/register_phone_number_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_phone_number"
            android:inputType="phone"
            android:maxLines="1" />

    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/register_verification_code_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_verification_code"
                android:inputType="number"
                android:maxLines="1" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/register_get_verification_code_button"
            android:layout_width="@dimen/register_verification_code_button_width"
            android:layout_height="wrap_content"
            android:text="@string/action_get_verification_code"
            android:theme="@style/ButtonPrimary" />

        <Button
            android:id="@+id/register_countdown_button"
            android:layout_width="@dimen/register_verification_code_button_width"
            android:layout_height="wrap_content"
            android:text="@string/action_get_verification_code"
            android:theme="@style/ButtonShowText"
            android:visibility="gone"/>

    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/register_invitation_code_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_invitation_code"
            android:inputType="textCapCharacters|textNoSuggestions"
            android:maxLines="1" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/register_recommender_id_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_recommender_id"
            android:inputType="textCapCharacters|textNoSuggestions"
            android:maxLines="1" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/register_next_step_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_register_next_step"
        android:textStyle="bold"
        android:theme="@style/ButtonPrimary" />

</LinearLayout>