<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/register_password_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_password"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:maxLines="1" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/register_confirm_password_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_confirm_password"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:maxLines="1" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/next_step_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_register_finish"
        android:textStyle="bold"
        android:theme="@style/ButtonPrimary" />

</LinearLayout>